--- a/AUTHORS
+++ b/AUTHORS
@@ -16,5 +16,6 @@ Yan Yuxi <545129563@qq.com>
 Fan Jiajia <1925864418@qq.com>
 Wei Erhong <2509650842@qq.com>
 Wang Ruiguang <a346295335@163.com>
+Wang Fei<462182044@qq.com>
 
 and the maintainers that have graduated.
