--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,9 @@ Yan Yuxi <545129563@qq.com>
 Fan Jiajia <1925864418@qq.com>
 Wei Erhong <2509650842@qq.com>
 Wang Ruiguang <a346295335@163.com>
-Wang Fei<462182044@qq.com>
+Wang Fei <462182044@qq.com>
+Liu Rundong <841165118@qq.com>
+Wang Jun <932867809@qq.com>
+Wang Yao <641609547@qq.com>
 
 and the maintainers that have graduated.
