--- a/AUTHORS
+++ b/AUTHORS
@@ -20,5 +20,6 @@ Wang Fei <462182044@qq.com>
 Liu Rundong <841165118@qq.com>
 Wang Jun <932867809@qq.com>
 Wang Yao <641609547@qq.com>
+Yu Junshuai <1094158623@qq.com>
 
 and the maintainers that have graduated.
